@@ -1,12 +1,37 @@
 package com.dpw.runner.shipment.services.service.impl;
 
 
+import static com.dpw.runner.shipment.services.commons.constants.Constants.AIR_FACTOR_FOR_VOL_WT;
+import static com.dpw.runner.shipment.services.commons.constants.Constants.CONSOLIDATION;
+import static com.dpw.runner.shipment.services.commons.constants.Constants.DIRECTION_CTS;
+import static com.dpw.runner.shipment.services.commons.constants.Constants.DIRECTION_IMP;
+import static com.dpw.runner.shipment.services.commons.constants.Constants.IMPORT_SHIPMENT_PULL_ATTACHMENT_EMAIL;
+import static com.dpw.runner.shipment.services.commons.constants.Constants.ROAD_FACTOR_FOR_VOL_WT;
+import static com.dpw.runner.shipment.services.commons.constants.Constants.SHIPMENT;
+import static com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType.APPROVE;
+import static com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType.SHIPMENT_PULL_REQUESTED;
+import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.IsStringNullOrEmpty;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.andCriteria;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.constructListCommonRequest;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.listIsNullOrEmpty;
+import static com.dpw.runner.shipment.services.utils.UnitConversionUtility.convertUnit;
+import static java.util.stream.Collectors.toMap;
+
 import com.dpw.runner.shipment.services.ReportingService.Models.TenantModel;
 import com.dpw.runner.shipment.services.ReportingService.Reports.IReport;
 import com.dpw.runner.shipment.services.adapters.interfaces.ITrackingServiceAdapter;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantContext;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.UserContext;
-import com.dpw.runner.shipment.services.commons.constants.*;
+import com.dpw.runner.shipment.services.commons.constants.AwbConstants;
+import com.dpw.runner.shipment.services.commons.constants.CacheConstants;
+import com.dpw.runner.shipment.services.commons.constants.ConsolidationConstants;
+import com.dpw.runner.shipment.services.commons.constants.Constants;
+import com.dpw.runner.shipment.services.commons.constants.DaoConstants;
+import com.dpw.runner.shipment.services.commons.constants.EntityTransferConstants;
+import com.dpw.runner.shipment.services.commons.constants.EventConstants;
+import com.dpw.runner.shipment.services.commons.constants.MasterDataConstants;
+import com.dpw.runner.shipment.services.commons.constants.PermissionConstants;
 import com.dpw.runner.shipment.services.commons.enums.DBOperationType;
 import com.dpw.runner.shipment.services.commons.requests.AuditLogMetaData;
 import com.dpw.runner.shipment.services.commons.requests.CommonGetRequest;
@@ -14,18 +39,84 @@ import com.dpw.runner.shipment.services.commons.requests.CommonRequestModel;
 import com.dpw.runner.shipment.services.commons.requests.ListCommonRequest;
 import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.config.CustomKeyGenerator;
-import com.dpw.runner.shipment.services.dao.interfaces.*;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.*;
+import com.dpw.runner.shipment.services.dao.interfaces.IAwbDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IConsoleShipmentMappingDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IConsolidationDetailsDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IContainerDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IEventDao;
+import com.dpw.runner.shipment.services.dao.interfaces.INetworkTransferDao;
+import com.dpw.runner.shipment.services.dao.interfaces.INotificationDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IPackingDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IPartiesDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IReferenceNumbersDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IRoutingsDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IShipmentDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IShipmentSettingsDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IShipmentsContainersMappingDao;
+import com.dpw.runner.shipment.services.dao.interfaces.ITruckDriverDetailsDao;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.CalculatePackUtilizationRequest;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ConsoleCalculationsRequest;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ConsoleCalculationsResponse;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ShipmentGridChangeResponse;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ShipmentMeasurementDetailsDto;
 import com.dpw.runner.shipment.services.dto.GeneralAPIRequests.VolumeWeightChargeable;
-import com.dpw.runner.shipment.services.dto.request.*;
-import com.dpw.runner.shipment.services.dto.response.*;
+import com.dpw.runner.shipment.services.dto.request.ConsolidationDetailsRequest;
+import com.dpw.runner.shipment.services.dto.request.EmailTemplatesRequest;
+import com.dpw.runner.shipment.services.dto.request.EventsRequest;
+import com.dpw.runner.shipment.services.dto.request.LogHistoryRequest;
+import com.dpw.runner.shipment.services.dto.request.PartiesRequest;
+import com.dpw.runner.shipment.services.dto.request.ReferenceNumbersRequest;
+import com.dpw.runner.shipment.services.dto.request.RoutingsRequest;
+import com.dpw.runner.shipment.services.dto.request.ShipmentAttachDetachV3Request;
+import com.dpw.runner.shipment.services.dto.request.TruckDriverDetailsRequest;
+import com.dpw.runner.shipment.services.dto.response.AchievedQuantitiesResponse;
+import com.dpw.runner.shipment.services.dto.response.AllocationsResponse;
+import com.dpw.runner.shipment.services.dto.response.ConsolidationDetailsResponse;
+import com.dpw.runner.shipment.services.dto.response.ContainerResponse;
+import com.dpw.runner.shipment.services.dto.response.FieldClassDto;
+import com.dpw.runner.shipment.services.dto.response.PackingResponse;
+import com.dpw.runner.shipment.services.dto.response.TruckDriverDetailsResponse;
 import com.dpw.runner.shipment.services.dto.trackingservice.UniversalTrackingPayload;
 import com.dpw.runner.shipment.services.dto.v1.response.V1TenantSettingsResponse;
 import com.dpw.runner.shipment.services.dto.v1.response.WareHouseResponse;
-import com.dpw.runner.shipment.services.entity.*;
+import com.dpw.runner.shipment.services.entity.AchievedQuantities;
+import com.dpw.runner.shipment.services.entity.AdditionalDetails;
+import com.dpw.runner.shipment.services.entity.Allocations;
+import com.dpw.runner.shipment.services.entity.ArrivalDepartureDetails;
+import com.dpw.runner.shipment.services.entity.Awb;
+import com.dpw.runner.shipment.services.entity.CarrierDetails;
+import com.dpw.runner.shipment.services.entity.ConsoleShipmentMapping;
+import com.dpw.runner.shipment.services.entity.ConsolidationDetails;
+import com.dpw.runner.shipment.services.entity.Containers;
+import com.dpw.runner.shipment.services.entity.Events;
+import com.dpw.runner.shipment.services.entity.NetworkTransfer;
+import com.dpw.runner.shipment.services.entity.Packing;
+import com.dpw.runner.shipment.services.entity.Parties;
+import com.dpw.runner.shipment.services.entity.ReferenceNumbers;
+import com.dpw.runner.shipment.services.entity.Routings;
+import com.dpw.runner.shipment.services.entity.ShipmentDetails;
+import com.dpw.runner.shipment.services.entity.ShipmentSettingsDetails;
+import com.dpw.runner.shipment.services.entity.ShipmentsContainersMapping;
+import com.dpw.runner.shipment.services.entity.TenantProducts;
+import com.dpw.runner.shipment.services.entity.TriangulationPartner;
+import com.dpw.runner.shipment.services.entity.TruckDriverDetails;
 import com.dpw.runner.shipment.services.entity.commons.BaseEntity;
-import com.dpw.runner.shipment.services.entity.enums.*;
-import com.dpw.runner.shipment.services.entitytransfer.dto.*;
+import com.dpw.runner.shipment.services.entity.enums.AwbStatus;
+import com.dpw.runner.shipment.services.entity.enums.CarrierBookingStatus;
+import com.dpw.runner.shipment.services.entity.enums.IntegrationType;
+import com.dpw.runner.shipment.services.entity.enums.LoggerEvent;
+import com.dpw.runner.shipment.services.entity.enums.NetworkTransferStatus;
+import com.dpw.runner.shipment.services.entity.enums.ProductProcessTypes;
+import com.dpw.runner.shipment.services.entity.enums.RoutingCarriage;
+import com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferCarrier;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferCommodityType;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferContainerType;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferCurrency;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferDGSubstance;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferMasterLists;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferUnLocations;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferVessels;
 import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.exception.exceptions.ValidationException;
 import com.dpw.runner.shipment.services.helpers.DependentServiceHelper;
@@ -38,14 +129,52 @@ import com.dpw.runner.shipment.services.masterdata.dto.CarrierMasterData;
 import com.dpw.runner.shipment.services.masterdata.dto.request.MasterListRequest;
 import com.dpw.runner.shipment.services.masterdata.dto.request.MasterListRequestV2;
 import com.dpw.runner.shipment.services.masterdata.response.UnlocationsResponse;
-import com.dpw.runner.shipment.services.service.interfaces.*;
+import com.dpw.runner.shipment.services.service.interfaces.IAuditLogService;
+import com.dpw.runner.shipment.services.service.interfaces.IConsolidationV3Service;
+import com.dpw.runner.shipment.services.service.interfaces.IContainerService;
+import com.dpw.runner.shipment.services.service.interfaces.IEventService;
+import com.dpw.runner.shipment.services.service.interfaces.ILogsHistoryService;
+import com.dpw.runner.shipment.services.service.interfaces.INetworkTransferService;
+import com.dpw.runner.shipment.services.service.interfaces.IPackingService;
 import com.dpw.runner.shipment.services.service.v1.IV1Service;
 import com.dpw.runner.shipment.services.service.v1.util.V1ServiceUtil;
 import com.dpw.runner.shipment.services.syncing.interfaces.IConsolidationSync;
 import com.dpw.runner.shipment.services.syncing.interfaces.IShipmentSync;
-import com.dpw.runner.shipment.services.utils.*;
+import com.dpw.runner.shipment.services.utils.BookingIntegrationsUtility;
+import com.dpw.runner.shipment.services.utils.CommonUtils;
+import com.dpw.runner.shipment.services.utils.ConsolidationValidationUtil;
+import com.dpw.runner.shipment.services.utils.FieldUtils;
+import com.dpw.runner.shipment.services.utils.GetNextNumberHelper;
+import com.dpw.runner.shipment.services.utils.MasterDataKeyUtils;
+import com.dpw.runner.shipment.services.utils.MasterDataUtils;
+import com.dpw.runner.shipment.services.utils.NetworkTransferV3Util;
+import com.dpw.runner.shipment.services.utils.ProductIdentifierUtility;
+import com.dpw.runner.shipment.services.utils.StringUtility;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.nimbusds.jose.util.Pair;
+import java.lang.reflect.InvocationTargetException;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.EnumMap;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
 import org.jetbrains.annotations.NotNull;
@@ -62,28 +191,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 
-import java.lang.reflect.InvocationTargetException;
-import java.math.BigDecimal;
-import java.math.RoundingMode;
-import java.time.LocalDateTime;
-import java.util.*;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static com.dpw.runner.shipment.services.commons.constants.Constants.*;
-import static com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType.APPROVE;
-import static com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType.SHIPMENT_PULL_REQUESTED;
-import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
-import static com.dpw.runner.shipment.services.utils.CommonUtils.*;
-import static com.dpw.runner.shipment.services.utils.UnitConversionUtility.convertUnit;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toMap;
-
 @SuppressWarnings("ALL")
 @Service
 @Slf4j
@@ -91,7 +198,10 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
 
     @Autowired
     ExecutorService executorService;
-
+    @Autowired
+    CacheManager cacheManager;
+    @Autowired
+    CustomKeyGenerator keyGenerator;
     @Autowired
     private IConsolidationDetailsDao consolidationDetailsDao;
     @Autowired
@@ -202,12 +312,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
 
     @Autowired
     private GetNextNumberHelper getNextNumberHelper;
-
-    @Autowired
-    CacheManager cacheManager;
-
-    @Autowired
-    CustomKeyGenerator keyGenerator;
 
     @Override
     @Transactional
@@ -643,7 +747,8 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         return fetchUnlocationDataFuture;
     }
 
-    private void calculateAchievedValues(ConsolidationDetails consolidationDetails, ShipmentGridChangeResponse response, Set<ShipmentDetails> shipmentDetailsList) throws Exception {
+    private void calculateAchievedValues(ConsolidationDetails consolidationDetails, ShipmentGridChangeResponse response, Set<ShipmentDetails> shipmentDetailsList)
+            throws RunnerException {
         // Not to process the achieved values in case of AIR transport mode
         if(Constants.TRANSPORT_MODE_AIR.equalsIgnoreCase(consolidationDetails.getTransportMode())) {
             return;
@@ -741,24 +846,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         response.setSummaryConsolContainer(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(consoleCont), 0, v1TenantSettingsResponse));
         response.setSummaryShipmentTEU(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(shipmentTeu), 0, v1TenantSettingsResponse));
         response.setSummaryShipmentContainer(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(shipmentCont), 0, v1TenantSettingsResponse));
-    }
-
-    private Double getShipmentTeu(Containers containers, Double shipmentTeu, EntityTransferContainerType object) {
-        if(isShipmentListPresent(containers)) {
-            shipmentTeu = shipmentTeu + (containers.getContainerCount() * object.getTeu());
-        }
-        return shipmentTeu;
-    }
-
-    private long getShipmentCont(Containers containers, long shipmentCont) {
-        if(isShipmentListPresent(containers)) {
-            shipmentCont = shipmentCont + containers.getContainerCount();
-        }
-        return shipmentCont;
-    }
-
-    private boolean isShipmentListPresent(Containers containers) {
-        return containers.getShipmentsList() != null && containers.getShipmentsList().size() > 0;
     }
 
     public VolumeWeightChargeable calculateVolumeWeight(String transportMode, String weightUnit, String volumeUnit, BigDecimal weight, BigDecimal volume) throws RunnerException {
@@ -914,10 +1001,10 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         List<Containers> oldContainerList = oldEntity.getContainersList();
 
         Map<Long, String> oldContainerMap = oldContainerList.stream()
-                .collect(Collectors.toMap(Containers::getId, Containers::getContainerNumber));
+                .collect(toMap(Containers::getId, Containers::getContainerNumber));
 
         Map<Long, String> containerMap = containersList.stream()
-                .collect(Collectors.toMap(Containers::getId, Containers::getContainerNumber));
+                .collect(toMap(Containers::getId, Containers::getContainerNumber));
 
         List<Long> containerIds = new ArrayList<>();
         for(Long id : oldContainerMap.keySet()){
@@ -950,25 +1037,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         }
 
         return isMawbChange || isCarrierSpacChange;
-    }
-
-    private Object getEntityTransferObjectCache(Containers containers, Map<String, Object> cacheMap) {
-        Object cache = null;
-        if(cacheMap.isEmpty()) {
-            var resp = cacheManager.getCache(CacheConstants.CACHE_KEY_MASTER_DATA).get(keyGenerator.customCacheKeyForMasterData(CacheConstants.CONTAINER_TYPE, containers.getContainerCode()));
-            if(!Objects.isNull(resp)) cache = resp.get();
-        } else {
-            cache = cacheMap.get(containers.getContainerCode());
-        }
-        return cache;
-    }
-
-    private void processCacheAndContainerResponseList(ConsolidationDetails consolidationDetails, Set<String> containerTypes, Map<String, Map<String, String>> fieldNameKeyMap, Map<String, Object> cacheMap) {
-        List<ContainerResponse> containerResponseList = jsonHelper.convertValueToList(consolidationDetails.getContainersList(), ContainerResponse.class);
-        if (!Objects.isNull(containerResponseList))
-            containerResponseList.forEach(r -> containerTypes.addAll(masterDataUtils.createInBulkContainerTypeRequest(r, Containers.class, fieldNameKeyMap, Containers.class.getSimpleName() + r.getId(), cacheMap)));
-        Map<String, EntityTransferContainerType> v1Data = masterDataUtils.fetchInBulkContainerTypes(containerTypes);
-        masterDataUtils.pushToCache(v1Data, CacheConstants.CONTAINER_TYPE, containerTypes, new EntityTransferContainerType(), cacheMap);
     }
 
     private void checkCFSValidation(ConsolidationDetails consolidationDetails, Boolean isCreate, List<ShipmentDetails> shipmentDetails) throws RunnerException {
@@ -1034,14 +1102,332 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         }
     }
 
-    private boolean canSetChargableWeight(ConsolidationDetails consolidationDetails) {
-        return !IsStringNullOrEmpty(consolidationDetails.getContainerCategory()) && consolidationDetails.getContainerCategory().equals(Constants.SHIPMENT_TYPE_LCL)
-                && !IsStringNullOrEmpty(consolidationDetails.getTransportMode()) && consolidationDetails.getTransportMode().equals(Constants.TRANSPORT_MODE_SEA);
-    }
-
     private void setInterBranchContext(Boolean isInterBranchConsole) {
         if (Boolean.TRUE.equals(isInterBranchConsole))
             commonUtils.setInterBranchContextForHub();
+    }
+
+    /**
+     * Calculates achieved weight and volume values for all shipments under a consolidation, computes chargeable weight, updates allocations, and prepares summary response.
+     *
+     * @param consolidationId the ID of the consolidation to calculate for
+     * @return {@link ShipmentGridChangeResponse} containing updated shipment summary
+     * @throws RunnerException in case of data fetching or computation issues
+     */
+    @Override
+    public ShipmentGridChangeResponse calculateAchievedValues(Long consolidationId) throws RunnerException {
+        ShipmentGridChangeResponse response = new ShipmentGridChangeResponse();
+        ConsolidationDetails consolidationDetails = fetchConsolidationDetails(consolidationId);
+
+        // Perform the main logic for calculating achieved values and update the response
+        calculateAchievedValues(consolidationDetails, response, consolidationDetails.getShipmentsList());
+
+        return response;
+    }
+
+    /**
+     * Populates the response summary fields: weight, volume, allocations, and chargeable weight.
+     */
+    private void updateResponseSummary(ConsolidationDetails consolidationDetails, ShipmentGridChangeResponse response, BigDecimal totalWeight,
+            V1TenantSettingsResponse v1TenantSettingsResponse, String weightChargeableUnit, BigDecimal totalVolume, String volumeChargeableUnit) throws RunnerException {
+
+        response.setAllocations(jsonHelper.convertValue(consolidationDetails.getAllocations(), AllocationsResponse.class));
+        response.setAchievedQuantities(jsonHelper.convertValue(consolidationDetails.getAchievedQuantities(), AchievedQuantitiesResponse.class));
+
+        // Format and set total weight and volume
+        response.setSummaryWeight(IReport.ConvertToWeightNumberFormat(totalWeight, v1TenantSettingsResponse) + " " + weightChargeableUnit);
+        response.setSummaryVolume(IReport.ConvertToVolumeNumberFormat(totalVolume, v1TenantSettingsResponse) + " " + volumeChargeableUnit);
+
+        // For LCL Sea shipments, calculate chargeable weight (max of volume and weight)
+        if (canSetChargableWeight(consolidationDetails)) {
+            double volInM3 = convertUnit(Constants.VOLUME, totalVolume, volumeChargeableUnit, Constants.VOLUME_UNIT_M3).doubleValue();
+            double wtInKg = convertUnit(Constants.MASS, totalWeight, weightChargeableUnit, Constants.WEIGHT_UNIT_KG).doubleValue();
+            double chargeableWeight = Math.max(wtInKg / 1000, volInM3); // Compare in tons
+            chargeableWeight = BigDecimal.valueOf(chargeableWeight).setScale(2, RoundingMode.HALF_UP).doubleValue();
+            response.setSummaryChargeableWeight(chargeableWeight + " " + Constants.VOLUME_UNIT_M3);
+        }
+    }
+
+    /**
+     * Computes chargeable weight/volume and updates achieved quantities and allocation units.
+     */
+    private void updateAllocationsAndChargeables(ConsolidationDetails consolidationDetails, String weightChargeableUnit, String volumeChargeableUnit,
+            BigDecimal totalWeight, BigDecimal totalVolume) throws RunnerException {
+
+        String transportMode = consolidationDetails.getTransportMode();
+
+        if (consolidationDetails.getAllocations() == null) {
+            consolidationDetails.setAllocations(new Allocations());
+        }
+
+        // Compute chargeable weight based on mode
+        VolumeWeightChargeable vwOb = calculateVolumeWeight(transportMode, weightChargeableUnit, volumeChargeableUnit, totalWeight, totalVolume);
+
+        consolidationDetails.getAchievedQuantities().setConsolidationChargeQuantity(vwOb.getChargeable());
+        consolidationDetails.getAchievedQuantities().setConsolidationChargeQuantityUnit(vwOb.getChargeableUnit());
+
+        // Special case for LCL sea shipments
+        if (transportMode.equals(Constants.TRANSPORT_MODE_SEA)
+                && Constants.SHIPMENT_TYPE_LCL.equals(consolidationDetails.getContainerCategory())) {
+
+            BigDecimal winKg = new BigDecimal(convertUnit(Constants.MASS, consolidationDetails.getAllocations().getWeight(),
+                    consolidationDetails.getAllocations().getWeightUnit(), Constants.WEIGHT_UNIT_KG).toString());
+
+            BigDecimal vinM3 = new BigDecimal(convertUnit(Constants.VOLUME, consolidationDetails.getAllocations().getVolume(),
+                    consolidationDetails.getAllocations().getVolumeUnit(), Constants.VOLUME_UNIT_M3).toString());
+
+            // Max of weight in tons or volume in m3
+            consolidationDetails.getAchievedQuantities().setConsolidationChargeQuantity(winKg.divide(BigDecimal.valueOf(1000)).max(vinM3));
+            consolidationDetails.getAchievedQuantities().setConsolidationChargeQuantityUnit(Constants.VOLUME_UNIT_M3);
+        }
+
+        consolidationDetails.getAchievedQuantities().setWeightVolume(vwOb.getVolumeWeight());
+        consolidationDetails.getAchievedQuantities().setWeightVolumeUnit(vwOb.getVolumeWeightUnit());
+        consolidationDetails.getAllocations().setChargeableUnit(vwOb.getChargeableUnit());
+    }
+
+    /**
+     * Sets weight and volume into AchievedQuantities section of the consolidation.
+     */
+    private void setAchievedQuantities(ConsolidationDetails details, BigDecimal weight, String weightUnit, BigDecimal volume, String volumeUnit) {
+        if (details.getAchievedQuantities() == null) {
+            details.setAchievedQuantities(new AchievedQuantities());
+        }
+        details.getAchievedQuantities().setConsolidatedWeight(weight);
+        details.getAchievedQuantities().setConsolidatedWeightUnit(weightUnit);
+        details.getAchievedQuantities().setConsolidatedVolume(volume);
+        details.getAchievedQuantities().setConsolidatedVolumeUnit(volumeUnit);
+    }
+
+    /**
+     * Calculates the total gross weight from all containers in the provided shipments,
+     * converting each container's gross weight to the specified target unit.
+     *
+     * @param shipments  Set of shipment details containing containers.
+     * @param targetUnit The unit to which all gross weights should be converted.
+     * @return The total gross weight in the specified target unit.
+     * @throws RunnerException If unit conversion fails for any container.
+     */
+    private BigDecimal calculateTotalGrossWeight(Set<ShipmentDetails> shipments, String targetUnit) throws RunnerException {
+        // Return zero if there are no shipments
+        if (shipments == null || shipments.isEmpty()) {
+            return BigDecimal.ZERO;
+        }
+
+        BigDecimal totalGrossWeight = BigDecimal.ZERO;
+
+        // Iterate through each shipment
+        for (ShipmentDetails shipment : shipments) {
+            Set<Containers> containersList = shipment.getContainersList();
+
+            // Skip if there are no containers in the shipment
+            if (containersList == null || containersList.isEmpty()) {
+                continue;
+            }
+
+            // Iterate through each container in the shipment
+            for (Containers container : containersList) {
+                try {
+                    // Convert container gross weight to target unit and add to total
+                    BigDecimal convertedWeight = new BigDecimal(convertUnit(
+                            Constants.MASS,
+                            container.getGrossWeight(),
+                            container.getGrossWeightUnit(),
+                            targetUnit
+                    ).toString());
+
+                    totalGrossWeight = totalGrossWeight.add(convertedWeight);
+                } catch (RunnerException e) {
+                    // Log and rethrow the exception with shipment context
+                    log.error("Unit conversion failed for shipmentId={}, containerUnit={}, targetUnit={}: {}",
+                            shipment.getId(), container.getGrossWeightUnit(), targetUnit, e.getMessage(), e);
+                    throw new RunnerException("Failed gross weight conversion for shipment ID: " + shipment.getId(), e);
+                }
+            }
+        }
+
+        return totalGrossWeight;
+    }
+
+    /**
+     * Calculates the total gross volume from all containers in the provided shipments,
+     * converting each container's gross volume to the specified target unit.
+     *
+     * @param shipments  Set of shipment details containing containers.
+     * @param targetUnit The unit to which all gross volumes should be converted.
+     * @return The total gross volume in the specified target unit.
+     * @throws RunnerException If unit conversion fails for any container.
+     */
+    private BigDecimal calculateTotalGrossVolume(Set<ShipmentDetails> shipments, String targetUnit) throws RunnerException {
+        // Return zero if there are no shipments
+        if (shipments == null || shipments.isEmpty()) {
+            return BigDecimal.ZERO;
+        }
+
+        BigDecimal totalGrossVolume = BigDecimal.ZERO;
+
+        // Iterate through each shipment
+        for (ShipmentDetails shipment : shipments) {
+            Set<Containers> containersList = shipment.getContainersList();
+
+            // Skip if there are no containers in the shipment
+            if (containersList == null || containersList.isEmpty()) {
+                continue;
+            }
+
+            // Iterate through each container in the shipment
+            for (Containers container : containersList) {
+                try {
+                    // Convert container gross volume to target unit and add to total
+                    BigDecimal convertedVolume = new BigDecimal(convertUnit(
+                            Constants.VOLUME,
+                            container.getGrossVolume(),
+                            container.getGrossVolumeUnit(),
+                            targetUnit
+                    ).toString());
+
+                    totalGrossVolume = totalGrossVolume.add(convertedVolume);
+                } catch (RunnerException e) {
+                    // Log and rethrow the exception with shipment context
+                    log.error("Unit conversion failed for shipmentId={}, containerVolumeUnit={}, targetUnit={}: {}",
+                            shipment.getId(), container.getGrossVolumeUnit(), targetUnit, e.getMessage(), e);
+                    throw new RunnerException("Failed gross volume conversion for shipment ID: " + shipment.getId(), e);
+                }
+            }
+        }
+
+        return totalGrossVolume;
+    }
+
+
+    /**
+     * Calculates total weight from all shipments converted to target unit.
+     */
+    private BigDecimal calculateTotalWeight(Set<ShipmentDetails> shipments, String targetUnit) throws RunnerException {
+        if (shipments == null || shipments.isEmpty()) {
+            return BigDecimal.ZERO;
+        }
+
+        BigDecimal totalWeight = BigDecimal.ZERO;
+        for (ShipmentDetails shipment : shipments) {
+            try {
+                BigDecimal weight = new BigDecimal(convertUnit(
+                        Constants.MASS,
+                        shipment.getWeight(),
+                        shipment.getWeightUnit(),
+                        targetUnit
+                ).toString());
+                totalWeight = totalWeight.add(weight);
+            } catch (RunnerException e) {
+                log.error("Failed to convert weight unit for shipment ID: {}. Source unit: {}, Target unit: {}. Reason: {}",
+                        shipment.getId(), shipment.getWeightUnit(), targetUnit, e.getMessage(), e);
+                throw new RunnerException("Error converting weight unit for shipment ID: " + shipment.getId(), e);
+            }
+        }
+        return totalWeight;
+    }
+
+    /**
+     * Calculates total volume from all shipments converted to target unit.
+     */
+    private BigDecimal calculateTotalVolume(Set<ShipmentDetails> shipments, String targetUnit) throws RunnerException {
+        if (shipments == null || shipments.isEmpty()) {
+            return BigDecimal.ZERO;
+        }
+
+        BigDecimal totalVolume = BigDecimal.ZERO;
+        for (ShipmentDetails shipment : shipments) {
+            try {
+                BigDecimal volume = new BigDecimal(convertUnit(
+                        Constants.VOLUME,
+                        shipment.getVolume(),
+                        shipment.getVolumeUnit(),
+                        targetUnit
+                ).toString());
+                totalVolume = totalVolume.add(volume);
+            } catch (RunnerException e) {
+                log.error("Failed to convert volume unit for shipment ID: {}. Source unit: {}, Target unit: {}. Reason: {}",
+                        shipment.getId(), shipment.getVolumeUnit(), targetUnit, e.getMessage(), e);
+                throw new RunnerException("Error converting volume unit for shipment ID: " + shipment.getId(), e);
+            }
+        }
+        return totalVolume;
+    }
+
+
+    /**
+     * Determines whether chargeable weight logic applies (only for LCL Sea shipments).
+     */
+    private boolean canSetChargableWeight(ConsolidationDetails consolidationDetails) {
+        return Constants.SHIPMENT_TYPE_LCL.equals(consolidationDetails.getContainerCategory())
+                && Constants.TRANSPORT_MODE_SEA.equals(consolidationDetails.getTransportMode());
+    }
+
+    /**
+     * Returns shipment container count if shipment list is present.
+     */
+    private long getShipmentCont(Containers containers, long shipmentCont) {
+        if (isShipmentListPresent(containers)) {
+            shipmentCont += containers.getContainerCount();
+        }
+        return shipmentCont;
+    }
+
+    /**
+     * Returns shipment TEU count if shipment list is present.
+     */
+    private Double getShipmentTeu(Containers containers, Double shipmentTeu, EntityTransferContainerType typeData) {
+        if (isShipmentListPresent(containers)) {
+            shipmentTeu += containers.getContainerCount() * typeData.getTeu();
+        }
+        return shipmentTeu;
+    }
+
+    /**
+     * Checks if the shipment list exists and is non-empty.
+     */
+    private boolean isShipmentListPresent(Containers containers) {
+        return containers.getShipmentsList() != null && !containers.getShipmentsList().isEmpty();
+    }
+
+    /**
+     * Retrieves the container type entity from cache.
+     */
+    private Object getEntityTransferObjectCache(Containers containers, Map<String, Object> cacheMap) {
+        if (cacheMap.isEmpty()) {
+            var cached = cacheManager.getCache(CacheConstants.CACHE_KEY_MASTER_DATA)
+                    .get(keyGenerator.customCacheKeyForMasterData(CacheConstants.CONTAINER_TYPE, containers.getContainerCode()));
+            return cached != null ? cached.get() : null;
+        } else {
+            return cacheMap.get(containers.getContainerCode());
+        }
+    }
+
+    /**
+     * Prepares container type cache from the consolidation container list.
+     */
+    private void processCacheAndContainerResponseList(ConsolidationDetails consolidationDetails,
+            Set<String> containerTypes,
+            Map<String, Map<String, String>> fieldNameKeyMap,
+            Map<String, Object> cacheMap) {
+
+        List<ContainerResponse> containerResponseList = jsonHelper.convertValueToList(
+                consolidationDetails.getContainersList(), ContainerResponse.class);
+
+        if (containerResponseList != null) {
+            containerResponseList.forEach(containerResponse ->
+                    containerTypes.addAll(masterDataUtils.createInBulkContainerTypeRequest(
+                            containerResponse,
+                            Containers.class,
+                            fieldNameKeyMap,
+                            Containers.class.getSimpleName() + containerResponse.getId(),
+                            cacheMap
+                    ))
+            );
+        }
+
+        Map<String, EntityTransferContainerType> v1Data = masterDataUtils.fetchInBulkContainerTypes(containerTypes);
+        masterDataUtils.pushToCache(v1Data, CacheConstants.CONTAINER_TYPE, containerTypes, new EntityTransferContainerType(), cacheMap);
     }
 
     @Override
@@ -1444,7 +1830,7 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         return networkTransferDao.getInterConsoleNTList(shipmentIds, Constants.SHIPMENT).stream()
                 .collect(Collectors.groupingBy(
                         NetworkTransfer::getEntityId,
-                        Collectors.toMap(NetworkTransfer::getTenantId, transfer -> transfer)
+                        toMap(NetworkTransfer::getTenantId, transfer -> transfer)
                 ));
     }
 
@@ -2114,7 +2500,7 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
 
         return interBranchShipmentDetailsList.stream()
                 .filter(shipment -> DIRECTION_IMP.equalsIgnoreCase(shipment.getDirection()))
-                .collect(Collectors.toMap(
+                .collect(toMap(
                         ShipmentDetails::getId,   // Key: ID of the shipment
                         shipment -> shipment      // Value: ShipmentDetails object itself
                 ));
@@ -2220,7 +2606,7 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
     }
 
     private void fetchTruckerInfo(Long id, ConsolidationDetailsResponse consolidationDetailsResponse) {
-        List<Long> shipmentIds = consoleShipmentMappingDao.findByConsolidationId(id).stream().map(ConsoleShipmentMapping::getShipmentId).collect(toList());
+        List<Long> shipmentIds = consoleShipmentMappingDao.findByConsolidationId(id).stream().map(ConsoleShipmentMapping::getShipmentId).toList();
         List<TruckDriverDetailsResponse> truckingInfo = new ArrayList<>();
         if (!shipmentIds.isEmpty()) {
             ListCommonRequest listCommonRequest = constructListCommonRequest("shipmentId", shipmentIds, "IN");
@@ -2234,8 +2620,9 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
                 var map = shipmentDetailsPage.getContent().stream().collect(toMap(ShipmentDetails::getId, ShipmentDetails::getShipmentId));
                 List<ContainerResponse> containers = consolidationDetailsResponse.getContainersList();
                 Map<Long, ContainerResponse> contMap = new HashMap<>();
-                if(containers != null)
-                    contMap = containers.stream().collect(Collectors.toMap(ContainerResponse::getId, Function.identity()));
+                if (containers != null) {
+                    contMap = containers.stream().collect(toMap(ContainerResponse::getId, Function.identity()));
+                }
                 Map<Long, ContainerResponse> finalContMap = contMap;
                 truckDriverDetails.forEach(truckDriverDetail -> {
                     var details = jsonHelper.convertValue(truckDriverDetail, TruckDriverDetailsResponse.class);
@@ -2437,7 +2824,8 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         List<String> includeColumns = FieldUtils.getMasterDataAnnotationFields(List.of(createFieldClassDto(ConsolidationDetails.class, null), createFieldClassDto(ArrivalDepartureDetails.class, "arrivalDetails."), createFieldClassDto(ArrivalDepartureDetails.class, "departureDetails.")));
         includeColumns.addAll(FieldUtils.getTenantIdAnnotationFields(List.of(createFieldClassDto(ConsolidationDetails.class, null))));
         includeColumns.addAll(ConsolidationConstants.LIST_INCLUDE_COLUMNS);
-        ConsolidationDetailsResponse consolidationDetailsResponse = (ConsolidationDetailsResponse) commonUtils.setIncludedFieldsToResponse(consolidationDetails, includeColumns, new ConsolidationDetailsResponse());
+        ConsolidationDetailsResponse consolidationDetailsResponse = (ConsolidationDetailsResponse) commonUtils.setIncludedFieldsToResponse(consolidationDetails,
+                includeColumns.stream().collect(Collectors.toSet()), new ConsolidationDetailsResponse());
         log.info("Total time taken in setting consol details response {}", (System.currentTimeMillis() - start));
         return fetchAllMasterDataByKey(consolidationDetails, consolidationDetailsResponse);
     }
